# vineyard-color-filter

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: ColorFilterParameters.cfg  trunk_color_filter_params.yaml
include/: CentroidTracker.h  VineyardColorFilter.h
launch/: trunk_detection.launch
src/: VineyardColorFilter.cpp  depth.cpp  main.cpp  p.py
